# service-py-protos

./: Makefile  README.MD  pyproject.toml
protos/Auth_sprint_2/v1/: auth.proto  errors.proto  request_context.proto
service_gen/Auth_sprint_2/v1/: auth_pb2.py  auth_pb2_grpc.py  errors_pb2.py  errors_pb2_grpc.py  request_context_pb2.py  request_context_pb2_grpc.py
