[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-py-protos"
version = "0.1.0"
description = "Generated gRPC stubs for services"
dependencies = [
    "grpcio==1.78.0",
    "protobuf==7.34.0",
]

[tool.setuptools.packages.find]
include = ["service_gen*"]
