[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-py-protos"
version = "0.1.0"
description = "Generated gRPC stubs for services"
dependencies = [
    "grpcio==1.78.0",
    "protobuf==6.33.6",
]

[tool.setuptools]
package-dir = {"" = "service_gen"}

[tool.setuptools.packages.find]
where = ["service_gen"]
include = ["*"]
